--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -10,14 +10,26 @@ jobs:
     name: Validate Branch and Commits
     runs-on: ubuntu-latest
     steps:
+      - name: Check PR title follows Conventional Commits
+        run: |
+          echo "🔍 Checking PR title for conventional commit format"
+          PR_TITLE="${{ github.event.pull_request.title }}"
+          if [[ "$PR_TITLE" =~ ^(chore|ci|docs|feat|fix|style|refactor|test|sample|build|revert)(\([a-z0-9\-_, ]+\))?:\ .* ]]; then
+            echo "✅ PR title is valid: $PR_TITLE"
+          else
+            echo "❌ Error: PR title does not follow Conventional Commits format."
+            echo "Example: feat(parser): add ability to parse arrays"
+            exit 1
+          fi
+
       - name: Check branch name pattern
         if: github.base_ref == 'develop'
         run: |
           BRANCH_NAME="${{ github.head_ref }}"
-          if [[ "$BRANCH_NAME" =~ ^(chore|ci|docs|feat|fix|style|refactor|test|sample)\/.+ ]]; then
-            echo "Branch name $BRANCH_NAME follows the required naming convention"
+          if [[ "$BRANCH_NAME" =~ ^(chore|ci|docs|feat|fix|style|refactor|test|sample|build|revert)\/.+ ]]; then
+            echo "✅ Branch name $BRANCH_NAME follows the required naming convention"
           else
-            echo "Error: Branch name $BRANCH_NAME does not follow the required naming convention"
+            echo "❌ Error: Branch name $BRANCH_NAME does not follow the required naming convention"
             echo "Branch must follow naming conventions defined in CONTRIBUTING.md"
             exit 1
           fi
@@ -37,10 +49,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate-branch]
     steps:
-      - name: Chevk name branch
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       - name: Checkout code
         uses: actions/checkout@v3
         with:
@@ -76,9 +84,10 @@ jobs:
           echo "Test coverage: $COVERAGE%"
           echo "Minimum required coverage: $MIN_COVERAGE%"
           if (( $(echo "$COVERAGE < $MIN_COVERAGE" | bc -l) )); then
-            echo "Error: Test coverage is below $MIN_COVERAGE%. Current coverage: $COVERAGE%"
+            echo "❌ Error: Test coverage is below $MIN_COVERAGE%. Current coverage: $COVERAGE%"
             exit 1
           fi
+
       - name: Check if changes are inside packages
         id: check_changes
         run: |
@@ -95,7 +104,6 @@ jobs:
             echo "🟡 No changes inside packages"
             echo "changed=false" >> $GITHUB_OUTPUT
           fi
-
 
       - name: SonarQube Scan
         if: steps.check_changes.outputs.changed == 'true'
