--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           echo "🔍 Checking PR title for conventional commit format"
           PR_TITLE="${{ github.event.pull_request.title }}"
+          echo "PR Title: $PR_TITLE"
           if [[ "$PR_TITLE" =~ ^(chore|ci|docs|feat|fix|style|refactor|test|sample|build|revert)\/.+ ]]; then
             echo "✅ PR title is valid: $PR_TITLE"
           else
