--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -14,12 +14,15 @@ jobs:
         run: |
           echo "🔍 Checking PR title for conventional commit format"
           PR_TITLE="${{ github.event.pull_request.title }}"
-          echo "PR Title: $PR_TITLE"
-          if [[ "$PR_TITLE" =~ ^(chore|ci|docs|feat|fix|style|refactor|test|sample|build|revert)\/.+ ]]; then
+          if [[ "$PR_TITLE" =~ ^(chore|ci|docs|feat|fix|style|refactor|test|sample|build|revert)(\([^)]+\))?:[[:space:]]*(.+) ]]; then
             echo "✅ PR title is valid: $PR_TITLE"
           else
             echo "❌ Error: PR title does not follow Conventional Commits format."
-            echo "Example: feat(core): add ability to parse arrays"
+            echo "Examples:"
+            echo "  feat: add new feature"
+            echo "  feat(core): add ability to parse arrays"
+            echo "  ci: ✨ PR title validation was added"
+            echo "  fix(core): 🐛 resolve login issue"
             exit 1
           fi
 
