chore: message lerna release was adjusted

--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,7 @@
       "exact": true,
       "conventionalCommits": true,
       "changelogPreset": "angular",
-      "message": ":bookmark: chore(release): publish %s",
+      "message": "chore(release): 🔖 publish %s",
       "private": false,
       "allowBranch": ["develop", "beta", "main"],
       "ignoreChanges": [
@@ -31,7 +31,7 @@
     },
     "publish": {
       "conventionalCommits": true,
-      "message": ":bookmark: chore(release): publish %s"
+      "message": "chore(release): 🔖publish %s"
     }
   },
   "packages": ["packages/*"]
