--- a/.nycrc
+++ b/.nycrc
@@ -19,7 +19,7 @@
   ],
   "per-file": true,
   "cache": false,
-  "check-coverage": true,
+  "check-coverage": false,
   "lines": 90,
   "functions": 90,
   "branches": 90,
